# OpenAdr-Lab

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  2026-03-28-145338-this-session-is-being-continued-from-a-previous-co.txt  BDD_WIRING_COMPLETION.md  CLAUDE.md  DOCUMENTATION.md  FAQ.md  GLOSSARY.md  LICENSE  REACT_GUIDELINES.md  README.md  Requirement-Gaps.md  TEST_EXECUTION_LOG.md  USE-CASE-MANUAL.md  VEN Reactor.drawio  WHISH_LIST.md  alignment-plan.md  fleet.sh  main_test_findings.md  open_adr_3_raspberry_pi_lab_complete_system_design_rewritten.md  project_journal.md  run_all_tests.sh  use_cases.md  whishlist.md
VEN/: .dockerignore  Cargo.toml  Dockerfile  docker-compose  docker-compose.yml  poll_example.json  project structure.txt  report_definition_example.yaml  report_example.json  status_example.json  todo.txt  ven_container_blueprint.md
VEN/profiles/: README.md  no_pv_test.yaml  policy_test.yaml  test.yaml  ven-1.yaml  ven-2.yaml  ven-3.yaml
VEN/src/: config.rs  ids.rs  loops.rs  main.rs  models.rs  planner_events.rs  profile.rs  reporter.rs  state.rs  vtn.rs  weather.rs
VEN/src/assets/: base_load.rs  battery.rs  battery_milp.rs  ev.rs  ev_milp.rs  grid.rs  heater.rs  heater_milp.rs  mod.rs  pv.rs
VEN/src/common/: mod.rs
VEN/src/controller/: absorber.rs  dispatcher.rs  envelope.rs  flexibility_policy.rs  history_port.rs  lp_planner.rs  milp_interactions.rs  milp_planner.rs  mod.rs  monitor.rs  openadr_interface.rs  planner.rs  profile.rs  report_intervals.rs  reporter.rs  reservation.rs  residual.rs  settings_port.rs  simulator_port.rs  trace.rs  (+6 more)
VEN/tests/: architecture.rs
VEN/ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  project structure.txt  screens and features.txt  ven_web_ui_blueprint.md  vite.config.ts
VTN/bff/: Cargo.toml  Dockerfile
(+1110 files in other folders)
